--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <head>
       <!-- Primary Meta Tags -->
       <title>GDSC FETJU GenAI Study Jams Leaderboard</title>
-      <meta name="title" content="GDSC fetju GenAI Study Jams Leaderboard" />
+      <meta name="title" content="GDSC FetJu GenAI Study Jams Leaderboard" />
       <meta
         name="description"
         content="Official Website of GDSC-fetju. GDSCs are a university-based community group for students interested in Google developer technologies. "
