--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
       <link
         rel="shortcut icon"
         type="image/x-icon"
-        href="assets/gdscfavi.png"
+        href="./assets/gdscfavi.png"
       />
     </head>
 
@@ -74,7 +74,7 @@
         <div class="container-fluid">
           <a href="https://gdsc.community.dev/fet-jain-university-bengaluru/">
             <img
-              src="/assets/logo.png"
+              src="./assets/logo.png"
               alt=""
               class="d-inline-block align-text-top"
             />
@@ -93,7 +93,7 @@
         <div class="gccp_data text-center my-5">
           <h4 style="font: weight 450"></h4>
             <img
-              src="/assets/cloudLg.png"
+              src="./assets/cloudLg.png"
               alt="fetju_logo"
               class="fetjulg"
             /><span>Google </span>GenAi
