--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
               <th scope="col"><b>Redemption Status</b></th>
               <th scope="col"><b>Course Completed</b></th>
               <th scope="col"><b>Skill Badges Completed</b></th>
-              <th scope="col"><b>GenAI Completed</b></th>
+              <!-- <th scope="col"><b>GenAI Completed</b></th> -->
               <th scope="col"><b>Total Completion</b></th>
             </tr>
           </thead>
