fix: arrange table data in center

--- a/index.html
+++ b/index.html
@@ -204,6 +204,8 @@
                     </tr>
                        `;
             });
+
+            //Todo: Fix According to CSV data
             document.getElementById("gccp_body").innerHTML = html;
           };
           updateData("");
