--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <head>
       <!-- Primary Meta Tags -->
       <title>GDSC FETJU GenAI Study Jams Leaderboard</title>
-      <meta name="title" content="GDSC FetJu GenAI Study Jams Leaderboard" />
+      <meta name="title" content="GDSC fetju GenAI Study Jams Leaderboard" />
       <meta
         name="description"
         content="Official Website of GDSC-fetju. GDSCs are a university-based community group for students interested in Google developer technologies. "
@@ -23,8 +23,8 @@
       />
       <!-- Twitter -->
       <meta property="twitter:card" content="summary_large_image" />
-      <meta property="twitter:url" content="https://fetjugdsc.github.io" />
-      <meta property="twitter:title" content="GDSC fetju GCCP Leaderboard" />
+      <meta property="twitter:url" content="https://gdsc-fetju.github.io/Gdsc-LeaderBoard/" />
+      <meta property="twitter:title" content="GDSC fetju GenAI Leaderboard" />
       <meta
         property="twitter:description"
         content="Official Website of GDSC-fetju. GDSCs are a university-based community group for students interested in Google developer technologies. "
